force-app/main/default/objects/Product_Unit__c/Product_Unit__c.object-meta.xml
<CustomObject>
    <label>Product Unit</label>
    <nameField>
        <displayFormat>PU-{000000}</displayFormat>
        <label>Product Unit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>