force-app/main/default/objects/Product_Unit__c/fields/Basic_Unit__c.field-meta.xml
<CustomField>
    <fullName>Basic_Unit__c</fullName>
    <label>Basic Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>