force-app/main/default/objects/Product_Unit__c/fields/Conversion_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Coefficient__c</fullName>
    <inlineHelpText>1 [Product Sales Unit] = [Conversion Coefficient] [Basic Metering Unit]</inlineHelpText>
    <label>Conversion Coefficient</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>