force-app/main/default/objects/Product_Unit__c/fields/Denominator__c.field-meta.xml
<CustomField>
    <fullName>Denominator__c</fullName>
    <label>Denominator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>