force-app/main/default/objects/Product_Unit__c/fields/Molecule__c.field-meta.xml
<CustomField>
    <fullName>Molecule__c</fullName>
    <label>Molecule</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>