force-app/main/default/objects/Product_Unit__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Product Unit</relationshipLabel>
    <relationshipName>Product_Unit</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>