force-app/main/default/objects/Product_Unit__c/fields/Product_Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Product_Sales_Unit__c</fullName>
    <label>Product Sales Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit</valueSetName>
    </valueSet>
</CustomField>